@@ -1,6 +1,6 @@
 {
   "name": "simp-xinetd",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "author": "SIMP Team",
   "summary": "Manages xinetd",
   "license": "Apache-2.0",
@@ -22,7 +22,7 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.1.0 < 4.0.0"
+      "version_requirement": ">= 3.7.0 < 4.0.0"
     },
     {
       "name": "simp/tcpwrappers",
